tests/fixtures/invalid/pow_int_bool_dict.py
# Cannot call pow() with Int, Bool, Dict[str, int]
x = pow(1, True, {"a": 1})
